<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.citrus.aboutcitrus.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:paddingBottom="15dp">

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchCitrus"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/devs_phone"
                    android:scaleType="fitCenter"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kenzo_oneplus3_maintainer_title"
                    android:layout_marginLeft="10dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center_horizontal"
                    android:layout_gravity="center_vertical" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/kenzo_oneplus3_maintainer_summary"
                    android:layout_marginLeft="10dp"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchCitrus"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/devs_phone"
                    android:scaleType="fitCenter"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bacon_maintainer_title"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/bacon_maintainer_summary"
                        android:layout_marginLeft="10dp"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchCitrus"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/devs_phone"
                    android:scaleType="fitCenter"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tomato_maintainer_title"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/tomato_maintainer_summary"
                        android:layout_marginLeft="10dp"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchCitrus"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/devs_phone"
                    android:scaleType="fitCenter"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/titan_maintainer_title"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/titan_maintainer_summary"
                        android:layout_marginLeft="10dp"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchCitrus"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/devs_phone"
                    android:scaleType="fitCenter"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jalebi_maintainer_title"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/jalebi_maintainer_summary"
                        android:layout_marginLeft="10dp"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchCitrus"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/devs_phone"
                    android:scaleType="fitCenter"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/lettuce_maintainer_title"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/lettuce_maintainer_summary"
                        android:layout_marginLeft="10dp"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/cards_margin"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:onClick="launchCitrus"
            android:padding="@dimen/cards_padding"
            card_view:cardBackgroundColor="@color/cardsbg"
            card_view:cardElevation="@dimen/cards_elevation">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/devs_phone"
                    android:scaleType="fitCenter"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/OnePlus2_maintainer_title"
                        android:layout_marginLeft="10dp"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:gravity="center_horizontal"
                        android:layout_gravity="center_vertical" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/OnePlus2_maintainer_summary"
                        android:layout_marginLeft="10dp"
                        android:textStyle="italic"
                        android:textSize="18sp"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
